--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             var myWindow = window.open("", "", "width=1500,height=1000");
             myWindow.document.open();
             myWindow.document.write('<style>body, html { margin: 0; padding: 0; overflow: hidden; }</style>');
-            myWindow.document.write('<iframe width="100%" height="100%" src="https://www.youtube.com/" frameborder="0" allowfullscreen></iframe>');
+            myWindow.document.write('<iframe width="100%" height="100%" src="https://example.com/" frameborder="0" allowfullscreen></iframe>');
             myWindow.document.close();
         }
     </script>
