--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
         <button onclick="window.open('https://wwv.helperguides.com', '_blank')" class="center-button">Site 1</button>
 
     
-        <button onclick="window.open('https://helperguides.com', '_blank')" class="center-button">Site 2</button>
+        <button onclick="window.open('https://wvw.helperguides.com', '_blank')" class="center-button">Site 2</button>
+
+        <button onclick="window.open('https://helperguides.com', '_blank')" class="center-button">Site 3</button>
 
     
     </div>
