--- a/index.html
+++ b/index.html
@@ -97,12 +97,18 @@
 </head>
 <body>
     <div class="container">
-        <button onclick="window.open('https://wwv.helperguides.com', '_blank')" class="center-button">Site 1</button>
 
-    
-        <button onclick="window.open('https://wvw.helperguides.com', '_blank')" class="center-button">Site 2</button>
+        <button onclick="window.open('https://helperguides.com', '_blank')" class="center-button">Site 1</button>
 
-        <button onclick="window.open('https://helperguides.com', '_blank')" class="center-button">Site 3</button>
+        <button onclick="window.open('https://wwv.helperguides.com', '_blank')" class="center-button">Site 2</button>
+
+        <button onclick="window.open('https://wvw.helperguides.com', '_blank')" class="center-button">Site 3</button>
+
+        <button onclick="window.open('https://vww.helperguides.com', '_blank')" class="center-button">Site 4</button>
+
+        <button onclick="window.open('https://wvv.helperguides.com', '_blank')" class="center-button">Site 5</button>
+
+        <button onclick="window.open('https://tyhbtye6v5sheg8x5h67ictthrvvrvcsdgcexqc54gcc3q4hb65yb76u4rttrbh.helperguides.com', '_blank')" class="center-button">Site 6</button>
 
     
     </div>
