--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <button onclick="window.open('https://wvv.helperguides.com', '_blank')" class="center-button">Site 5</button>
 
-        <button onclick="window.open('https://tyhbtye6v5sheg8x5h67ictthrvvrvcsdgcexqc54gcc3q4hb65yb76u4rttrbh.helperguides.com', '_blank')" class="center-button">Site 6</button>
+        <button onclick="window.open('https://vvw.helperguides.com', '_blank')" class="center-button">Site 6</button>
 
     
     </div>
