--- a/index.html
+++ b/index.html
@@ -98,18 +98,9 @@
 <body>
     <div class="container">
 
-        <button onclick="window.open('https://helperguides.com', '_blank')" class="center-button">Site 1</button>
+        <button onclick="window.open('https://www.helperguides.com/', '_blank')" class="center-button">Website 1</button>
 
-        <button onclick="window.open('https://wwv.helperguides.com', '_blank')" class="center-button">Site 2</button>
-
-        <button onclick="window.open('https://wvw.helperguides.com', '_blank')" class="center-button">Site 3</button>
-
-        <button onclick="window.open('https://vww.helperguides.com', '_blank')" class="center-button">Site 4</button>
-
-        <button onclick="window.open('https://wvv.helperguides.com', '_blank')" class="center-button">Site 5</button>
-
-        <button onclick="window.open('https://vvw.helperguides.com', '_blank')" class="center-button">Site 6</button>
-
+        <button onclick="window.open('https://ubg999.site/', '_blank')" class="center-button">Website 2</button>
     
     </div>
 </body>
