--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
         <button onclick="window.open('https://www.helperguides.com/', '_blank')" class="center-button">Website 1</button>
 
         <button onclick="window.open('https://ubg999.site/', '_blank')" class="center-button">Website 2</button>
+
+        <button onclick="window.open('https://qaizlet.com/', '_blank')" class="center-button">Website 3</button>
     
     </div>
 </body>
