--- a/index.html
+++ b/index.html
@@ -133,7 +133,29 @@
         text-align: center;
         font-size:50px;
         white-space: nowrap;
-        color:var(--primary-color);
+        color:#7967dd;
+        font-family: 'Minerva';
+
+       }
+
+       .headertext3 {
+        position: relative;
+        user-select: none;
+        text-align: center;
+        font-size:50px;
+        white-space: nowrap;
+        color:#ff8200;
+        font-family: 'Minerva';
+
+       }
+
+       .headertext4 {
+        position: relative;
+        user-select: none;
+        text-align: center;
+        font-size:50px;
+        white-space: nowrap;
+        color:#38b1ff;
         font-family: 'Minerva';
 
        }
@@ -399,7 +421,7 @@
 .red:hover {
     outline:solid;
   outline-width:2px;
-  outline-color: #e61414;
+  outline-color: #ff8200;
 }
 .blue:hover {
     outline:solid;
@@ -419,7 +441,9 @@
       
           <!--header-->
           <header>
-            <p class="headertext2">999</p>                                                                                                  
+            <p class="headertext2">9</p>  
+            <p class="headertext3">9</p>                                                                                                 
+            <p class="headertext4">9</p> 
           </header>
           
           <div class="center">
