--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
           </header>
           
           <div class="center">
-            <button onclick="window.open('https://www.helperguides.com/', '_blank')" class="btn purple">Helperguides.com</button>
+            <button onclick="window.open('https://helperguides.com/', '_blank')" class="btn purple">Helperguides.com</button>
 
             <button onclick="window.open('https://ubg999.site/', '_blank')" class="btn purple">Ubg999.site</button>
     
