--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
             <button onclick="window.open('https://qaizlet.com/', '_blank')" class="btn purple">Qaizlet.com</button>
 
             <button onclick="window.open('https://ubg999.club/', '_blank')" class="btn purple">Ubg999.club</button>
+
+            <button onclick="window.open('https://ubg999.store/', '_blank')" class="btn purple">Ubg999.store</button>
           </div>
           
        
